--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.15"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.3.4"
+  },
   "description": ""
 }
